<resources>
    <string name="app_name">GeekgardenApp</string>
    <string name="masukan_nama">Nama</string>
    <string name="Email">Email</string>
    <string name="Nama_perusahaan">Perusahaan</string>
    <string name="Budget">Budget</string>
    <string name="Timeline">Timeline</string>
    <string name="masukan_nomor_hp">Nomor</string>
    <string name="title_buka_whatsapp">Whatsapp</string>
</resources>